Clean up code, update print function
* Add type signature to method
* Update print function to print tabs instead of four spaces

--- a/package.yaml
+++ b/package.yaml
@@ -21,11 +21,12 @@ description:         Please see the README on GitHub at <https://github.com/afna
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
 
 library:
   source-dirs: src
   ghc-options:
-    - -threaded
+    - -Wall
 
 tests:
   binary-search-tree-test:
